# open-orbis

./: .deployment.md  .env.example  .firebaserc  .gitignore  CLAUDE.md  COMPETITIVE_LANDSCAPE.md  INFRASTRUCTURE_COSTS.md  MARKET_ANALYSIS.md  ORBIS_CONCEPT.md  README.md  TODO.md  agents.md  card-design.html  create_issues.sh  docker-compose.yml  firebase.json  ontology.md
backend/: .env.example  .gcloudignore  Dockerfile  Dockerfile.mcp  Makefile  cloudbuild.mcp.yaml  pyproject.toml  seed_aleberti.py  seed_kg.py
backend/app/: config.py  dependencies.py  http_helpers.py  main.py  rate_limit.py
backend/app/admin/: auth.py  db.py  models.py  router.py  schemas.py  seed.py  service.py
backend/app/analytics/: event_bus.py  middleware.py  posthog_client.py
backend/app/auth/: dev_login.py  gift_invites.py  mcp_keys.py  models.py  refresh_tokens.py  router.py  service.py
backend/app/cv/: claude_classifier.py  cloud_tasks.py  counter.py  docling_extractor.py  gemini_classifier.py  jobs_db.py  jobs_router.py  llmwhisperer.py  models.py  ollama_classifier.py  parser.py  progress.py  refiner.py  router.py  text_extractor.py  voice_router.py  whisper.py
backend/app/cv_storage/: db.py  gcs.py  storage.py
backend/app/db/: postgres.py
backend/app/drafts/: db.py  models.py  router.py
backend/app/email/: service.py  templates.py
backend/app/export/: router.py
backend/app/graph/: embeddings.py  encryption.py  llm_usage.py  neo4j_client.py  node_schema.py  ontology.py  provenance.py  queries.py
backend/app/ideas/: db.py  router.py
backend/app/messages/: models.py  router.py  welcome.py
backend/app/notes/: models.py  router.py
backend/app/oauth/: __init__.py  admin_router.py  authorize_router.py  db.py  grants_router.py  models.py  pkce.py  register_router.py  revoke_router.py  schema.sql  token_router.py  tokens.py  well_known_router.py
backend/app/orbs/: access_grants.py  connection_requests.py  filter_token.py  models.py  router.py  share_token.py  visibility.py
backend/app/search/: router.py
backend/app/snapshots/: db.py  service.py
backend/app/social/: dependencies.py  models.py  neo4j_client.py  queries.py  router.py
backend/app/telemetry/: models.py  router.py
backend/data/: cv_uploads.db-shm  cv_uploads.db-wal  drafts.db-shm  drafts.db-wal
backend/mcp_server/: auth.py  oauth_resolver.py  rate_limit.py  server.py  tools.py
backend/scripts/: grant_admin.py  seed_templates.py
backend/tests/: conftest.py
backend/tests/agents/: generate_cv.py  run_evaluation.sh  ux-evaluation-prompt.md
backend/tests/fixtures/: alessandro_berti_cv.txt  alessandro_berti_golden.json  eugenio_paluello_cv.txt  (+3 more)
(+315 files in other folders)
